[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "blearn"
authors = [
    {name = "Daniel Fosas", email = "d.fosas@ed.ac.uk"},
]
dependencies = [
    "arrow",
    "numpy",
    "pandas >1.1",
    "xlsxwriter",
    "parse",
    "tabulate",
    "xlwings",
]
requires-python = ">=3.7"
readme = "README.md"
classifiers = [ "License :: OSI Approved :: MIT License",]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/dfosas/blearn"

[project.optional-dependencies]
test = [
    "black",
    "flake8",
    "flake8-bugbear",
    "mypy",
    "pylint",
    "pytest >=7.0",
    "pytest-cov",
]
doc = ["sphinx"]

[project.scripts]
blearn-prepare = "blearn.grader:main"

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --doctest-modules --cov --cov-append --cov-report xml"
testpaths = [
    "bp_learn",
    "tests",
]
